2011-11-24  Glenn Morris  <rgm@gnu.org>

	* net/tls.el: Fix case of "GnuTLS".

	* paths.el (rmail-file-name): Format doc-string for make-docfile.

	* version.el (emacs-build-system): Give it a doc-string.

2011-11-24  Juri Linkov  <juri@jurta.org>

	* view.el (view-buffer): Revert 2011-07-19T15:01:49Z!larsi@gnus.org from 2011-07-19 (bug#8615).

2011-11-24  Glenn Morris  <rgm@gnu.org>

	* mail/rmailmm.el (rmail-mime): When rmail-enable-mime is non-nil,
	if called on a non-mime message just toggle the headers.  (Bug#8006)

2011-11-24  Juanma Barranquero  <lekktu@gmail.com>

	* allout.el (allout-setup, allout-auto-save-temporarily-disabled)
	(allout-lead-with-comment-string, allout-structure-deleted-hook)
	(allout-mode, allout-chart-subtree, allout-hotspot-key-handler)
	(allout-rebullet-heading, allout-open-sibtopic)
	(allout-toggle-current-subtree-encryption)
	(allout-toggle-subtree-encryption, allout-encrypt-string)
	(allout-next-topic-pending-encryption, allout-adjust-file-variable)
	(allout-distinctive-bullets-string, allout-auto-activation):
	* window.el (window-normalize-buffer-to-display):
	* progmodes/verilog-mode.el (verilog-batch-indent):
	* textmodes/bibtex.el (bibtex-field-braces-opt)
	(bibtex-field-strings-opt):
	* vc/cvs-status.el (cvs-tree-merge):
	Fix typos.

2011-11-23  Michael Albinus  <michael.albinus@gmx.de>

	* rfn-eshadow.el (rfn-eshadow-update-overlay): Let-bind
	`non-essential' to t, in order to avoid remote connections.

2011-11-23  Eli Zaretskii  <eliz@gnu.org>

	* emacs-lisp/autoload.el (autoload-generate-file-autoloads): On
	MS-DOS and MS-Windows, compare with loaddefs.el
	case-insensitively.

2011-11-23  Mark Lillibridge  <mark.lillibridge@hp.com>  (tiny change)

	* mail/unrmail.el (unrmail): Always add blank line.  (Bug#7743)

2011-11-23  Glenn Morris  <rgm@gnu.org>

	* paths.el (rmail-file-name): Reformat the doc-string so that it
	is picked up.

	* mail/rmail.el (rmail-message-filter, rmail-auto-file): Doc fixes.